add utf8-encoding to bower devDepends

--- a/bower.json
+++ b/bower.json
@@ -24,5 +24,8 @@
   "repository": {
     "type": "git",
     "url": "git://github.com/Jxck/URLSearchParams.git"
+  },
+  "dependencies": {
+    "utf8-encoding": "*"
   }
 }
