update utf8-encoding to v0.0.9

--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,7 @@
     "Jxck"
   ],
   "dependencies": {
-    "utf8-encoding": "*"
+    "utf8-encoding": "~0.0.9"
   },
   "homepage": "https://github.com/Jxck/URLSearchParams",
   "ignore": [
