--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "url": "https://github.com/Jxck/URLSearchParams/issues"
   },
   "dependencies": {
-    "utf8-encoding": "~0.1.0"
+    "utf8-encoding": "~0.1.x"
   },
   "devDependencies": {
     "bower": "^1.3.12",
